fixed tests now a real integration test for Kafka input to Kafka output   - ✅ gRPC input to Kafka output   - ✅ gRPC service-to-service forwarding   - ✅ Mixed routing (Kafka → gRPC → Kafka)   - ✅ Fan-out routing (one step to multiple outputs)   - ✅ Conditional routing