@@ -13,8 +13,9 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.*;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import lombok.Getter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -23,9 +24,9 @@ import org.slf4j.LoggerFactory;
  * It contains static fields and static methods for creating and retrieving test data.
  */
 public class ProtobufTestDataHelper {
-    
+
     private static final Logger log = LoggerFactory.getLogger(ProtobufTestDataHelper.class);
-    
+
     private static final String PIPE_DOC_DIRECTORY = "/test-data/pipe-docs";
     private static final String PIPE_STREAM_DIRECTORY = "/test-data/pipe-streams";
     private static final String TIKA_PIPE_DOC_DIRECTORY = "/test-data/tika-pipe-docs";
@@ -34,175 +35,103 @@ public class ProtobufTestDataHelper {
     private static final String CHUNKER_PIPE_STREAM_DIRECTORY = "/test-data/chunker-pipe-streams";
     private static final String SAMPLE_DOCUMENTS_DIRECTORY = "/test-data/sample-documents";
     private static final String FILE_EXTENSION = ".bin";
-    
+
     /**
      * Collection of PipeDoc objects.
+     * -- GETTER --
+     *  Retrieves a collection of PipeDoc objects.
      */
+    @Getter
     private static final Collection<PipeDoc> pipeDocuments = createPipeDocuments();
-    
+
     /**
      * Collection of PipeStream objects.
+     * -- GETTER --
+     *  Retrieves a collection of PipeStream objects.
      */
+    @Getter
     private static final Collection<PipeStream> pipeStreams = createPipeStreams();
-    
+
     /**
      * Collection of PipeDoc objects from Tika parser.
+     * -- GETTER --
+     *  Retrieves a collection of PipeDoc objects from Tika parser.
      */
+    @Getter
     private static final Collection<PipeDoc> tikaPipeDocuments = createTikaPipeDocuments();
-    
+
     /**
      * Collection of PipeStream objects from Tika parser.
+     * -- GETTER --
+     *  Retrieves a collection of PipeStream objects from Tika parser.
      */
+    @Getter
     private static final Collection<PipeStream> tikaPipeStreams = createTikaPipeStreams();
-    
+
     /**
      * Collection of PipeDoc objects from Chunker.
+     * -- GETTER --
+     *  Retrieves a collection of PipeDoc objects from Chunker.
      */
+    @Getter
     private static final Collection<PipeDoc> chunkerPipeDocuments = createChunkerPipeDocuments();
-    
+
     /**
      * Collection of PipeStream objects from Chunker.
+     * -- GETTER --
+     *  Retrieves a collection of PipeStream objects from Chunker.
      */
+    @Getter
     private static final Collection<PipeStream> chunkerPipeStreams = createChunkerPipeStreams();
-    
+
     /**
      * Map of PipeDoc objects by ID.
+     * -- GETTER --
+     *  Retrieves a map of PipeDoc objects by ID.
      */
+    @Getter
     private static final Map<String, PipeDoc> pipeDocumentsMap = createPipeDocumentMapById();
-    
+
     /**
      * Map of PipeStream objects by stream ID.
+     * -- GETTER --
+     *  Retrieves a map of PipeStream objects by stream ID.
      */
+    @Getter
     private static final Map<String, PipeStream> pipeStreamsMap = createPipeStreamMapById();
-    
+
     /**
      * Map of Tika PipeDoc objects by ID.
+     * -- GETTER --
+     *  Retrieves a map of Tika PipeDoc objects by ID.
      */
+    @Getter
     private static final Map<String, PipeDoc> tikaPipeDocumentsMap = createTikaPipeDocumentMapById();
-    
+
     /**
      * Map of Tika PipeStream objects by stream ID.
+     * -- GETTER --
+     *  Retrieves a map of Tika PipeStream objects by stream ID.
      */
+    @Getter
     private static final Map<String, PipeStream> tikaPipeStreamsMap = createTikaPipeStreamMapById();
-    
+
     /**
      * Map of Chunker PipeDoc objects by ID.
+     * -- GETTER --
+     *  Retrieves a map of Chunker PipeDoc objects by ID.
      */
+    @Getter
     private static final Map<String, PipeDoc> chunkerPipeDocumentsMap = createChunkerPipeDocumentMapById();
-    
+
     /**
      * Map of Chunker PipeStream objects by stream ID.
+     * -- GETTER --
+     *  Retrieves a map of Chunker PipeStream objects by stream ID.
      */
+    @Getter
     private static final Map<String, PipeStream> chunkerPipeStreamsMap = createChunkerPipeStreamMapById();
-    
-    /**
-     * Retrieves a collection of PipeDoc objects.
-     *
-     * @return A collection of PipeDoc objects.
-     */
-    public static Collection<PipeDoc> getPipeDocuments() {
-        return pipeDocuments;
-    }
-    
-    /**
-     * Retrieves a collection of PipeStream objects.
-     *
-     * @return A collection of PipeStream objects.
-     */
-    public static Collection<PipeStream> getPipeStreams() {
-        return pipeStreams;
-    }
-    
-    /**
-     * Retrieves a collection of PipeDoc objects from Tika parser.
-     *
-     * @return A collection of PipeDoc objects from Tika parser.
-     */
-    public static Collection<PipeDoc> getTikaPipeDocuments() {
-        return tikaPipeDocuments;
-    }
-    
-    /**
-     * Retrieves a collection of PipeStream objects from Tika parser.
-     *
-     * @return A collection of PipeStream objects from Tika parser.
-     */
-    public static Collection<PipeStream> getTikaPipeStreams() {
-        return tikaPipeStreams;
-    }
-    
-    /**
-     * Retrieves a collection of PipeDoc objects from Chunker.
-     *
-     * @return A collection of PipeDoc objects from Chunker.
-     */
-    public static Collection<PipeDoc> getChunkerPipeDocuments() {
-        return chunkerPipeDocuments;
-    }
-    
-    /**
-     * Retrieves a collection of PipeStream objects from Chunker.
-     *
-     * @return A collection of PipeStream objects from Chunker.
-     */
-    public static Collection<PipeStream> getChunkerPipeStreams() {
-        return chunkerPipeStreams;
-    }
-    
-    /**
-     * Retrieves a map of PipeDoc objects by ID.
-     *
-     * @return A map of PipeDoc objects by ID.
-     */
-    public static Map<String, PipeDoc> getPipeDocumentsMap() {
-        return pipeDocumentsMap;
-    }
-    
-    /**
-     * Retrieves a map of PipeStream objects by stream ID.
-     *
-     * @return A map of PipeStream objects by stream ID.
-     */
-    public static Map<String, PipeStream> getPipeStreamsMap() {
-        return pipeStreamsMap;
-    }
-    
-    /**
-     * Retrieves a map of Tika PipeDoc objects by ID.
-     *
-     * @return A map of Tika PipeDoc objects by ID.
-     */
-    public static Map<String, PipeDoc> getTikaPipeDocumentsMap() {
-        return tikaPipeDocumentsMap;
-    }
-    
-    /**
-     * Retrieves a map of Tika PipeStream objects by stream ID.
-     *
-     * @return A map of Tika PipeStream objects by stream ID.
-     */
-    public static Map<String, PipeStream> getTikaPipeStreamsMap() {
-        return tikaPipeStreamsMap;
-    }
-    
-    /**
-     * Retrieves a map of Chunker PipeDoc objects by ID.
-     *
-     * @return A map of Chunker PipeDoc objects by ID.
-     */
-    public static Map<String, PipeDoc> getChunkerPipeDocumentsMap() {
-        return chunkerPipeDocumentsMap;
-    }
-    
-    /**
-     * Retrieves a map of Chunker PipeStream objects by stream ID.
-     *
-     * @return A map of Chunker PipeStream objects by stream ID.
-     */
-    public static Map<String, PipeStream> getChunkerPipeStreamsMap() {
-        return chunkerPipeStreamsMap;
-    }
-    
+
     /**
      * Creates a map of PipeDoc objects by ID.
      *
@@ -214,7 +143,7 @@ public class ProtobufTestDataHelper {
         docs.forEach((doc) -> returnVal.put(doc.getId(), doc));
         return returnVal;
     }
-    
+
     /**
      * Creates a map of PipeStream objects by stream ID.
      *
@@ -226,7 +155,7 @@ public class ProtobufTestDataHelper {
         streams.forEach((stream) -> returnVal.put(stream.getStreamId(), stream));
         return returnVal;
     }
-    
+
     /**
      * Creates a map of Tika PipeDoc objects by ID.
      *
@@ -238,7 +167,7 @@ public class ProtobufTestDataHelper {
         docs.forEach((doc) -> returnVal.put(doc.getId(), doc));
         return returnVal;
     }
-    
+
     /**
      * Creates a map of Tika PipeStream objects by stream ID.
      *
@@ -250,7 +179,7 @@ public class ProtobufTestDataHelper {
         streams.forEach((stream) -> returnVal.put(stream.getStreamId(), stream));
         return returnVal;
     }
-    
+
     /**
      * Creates a map of Chunker PipeDoc objects by ID.
      *
@@ -262,7 +191,7 @@ public class ProtobufTestDataHelper {
         docs.forEach((doc) -> returnVal.put(doc.getId(), doc));
         return returnVal;
     }
-    
+
     /**
      * Creates a map of Chunker PipeStream objects by stream ID.
      *
@@ -274,7 +203,7 @@ public class ProtobufTestDataHelper {
         streams.forEach((stream) -> returnVal.put(stream.getStreamId(), stream));
         return returnVal;
     }
-    
+
     /**
      * Creates a collection of PipeDoc objects from the specified directory.
      *
@@ -287,7 +216,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Creates a collection of PipeStream objects from the specified directory.
      *
@@ -300,7 +229,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Creates a collection of PipeDoc objects from the Tika parser directory.
      *
@@ -313,7 +242,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Creates a collection of PipeStream objects from the Tika parser directory.
      *
@@ -326,7 +255,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Creates a collection of PipeDoc objects from the Chunker directory.
      *
@@ -339,7 +268,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Creates a collection of PipeStream objects from the Chunker directory.
      *
@@ -352,7 +281,7 @@ public class ProtobufTestDataHelper {
             return Collections.emptyList();
         }
     }
-    
+
     /**
      * Loads PipeDoc objects from the specified directory.
      *
@@ -374,7 +303,7 @@ public class ProtobufTestDataHelper {
         });
         return returnVal;
     }
-    
+
     /**
      * Loads PipeStream objects from the specified directory.
      *
@@ -396,7 +325,7 @@ public class ProtobufTestDataHelper {
         });
         return returnVal;
     }
-    
+
     /**
      * Retrieves a stream of paths from the given directory.
      *
@@ -434,7 +363,7 @@ public class ProtobufTestDataHelper {
         }
         return walk;
     }
-    
+
     /**
      * Loads sample PipeStreams from the sample documents directory.
      * This method reads various file types from the sample documents directory and creates PipeStream objects
@@ -444,12 +373,12 @@ public class ProtobufTestDataHelper {
      */
     public static Collection<PipeStream> loadSamplePipeStreams() {
         List<PipeStream> pipeStreams = new ArrayList<>();
-        
+
         try {
             // Get the URI of the sample documents directory
             URI uri = ProtobufTestDataHelper.class.getResource(SAMPLE_DOCUMENTS_DIRECTORY).toURI();
             Path sampleDocsPath;
-            
+
             // Handle both JAR and filesystem paths
             if (uri.getScheme().equals("jar")) {
                 FileSystem fileSystem = null;
@@ -463,36 +392,36 @@ public class ProtobufTestDataHelper {
             } else {
                 sampleDocsPath = Paths.get(uri);
             }
-            
+
             // Read all files in the directory (non-recursive)
             try (Stream<Path> paths = Files.list(sampleDocsPath)) {
                 List<Path> fileList = paths
                     .filter(Files::isRegularFile)
                     .filter(path -> !path.getFileName().toString().equals("metadata.csv")) // Skip metadata file
-                    .collect(Collectors.toList());
-                
+                    .toList();
+
                 // Process each file
                 for (Path filePath : fileList) {
                     try {
                         String fileName = filePath.getFileName().toString();
-                        
+
                         // Read file content
                         byte[] fileContent;
                         try (InputStream is = Files.newInputStream(filePath)) {
                             fileContent = is.readAllBytes();
                         }
-                        
+
                         // Create a PipeDoc to hold the binary data in a Blob
                         Blob.Builder blobBuilder = Blob.newBuilder()
                             .setData(ByteString.copyFrom(fileContent))
                             .setFilename(fileName);
-                        
+
                         // Add MIME type based on file extension
                         String mimeType = guessMimeType(fileName);
                         if (mimeType != null) {
                             blobBuilder.setMimeType(mimeType);
                         }
-                        
+
                         // Add metadata
                         blobBuilder.putMetadata("source", "sample-documents");
                         int lastDot = fileName.lastIndexOf('.');
@@ -500,17 +429,17 @@ public class ProtobufTestDataHelper {
                             String extension = fileName.substring(lastDot + 1).toLowerCase();
                             blobBuilder.putMetadata("file_extension", extension);
                         }
-                        
+
                         // Create PipeDoc with the blob
                         PipeDoc.Builder docBuilder = PipeDoc.newBuilder()
                             .setId("sample-doc-" + fileName.replaceAll("[^a-zA-Z0-9-]", "_"))
                             .setSourceUri("file://" + fileName)
                             .setBlob(blobBuilder.build());
-                        
+
                         if (mimeType != null) {
                             docBuilder.setSourceMimeType(mimeType);
                         }
-                        
+
                         // Create PipeStream with the document
                         PipeStream pipeStream = PipeStream.newBuilder()
                             .setStreamId("sample-stream-" + fileName.replaceAll("[^a-zA-Z0-9-]", "_"))
@@ -521,25 +450,119 @@ public class ProtobufTestDataHelper {
                             .putContextParams("filename", fileName)
                             .putContextParams("source", "sample-documents")
                             .build();
-                        
+
                         pipeStreams.add(pipeStream);
-                        
+
                     } catch (IOException e) {
                         // Log error but continue processing other files
                         log.error("Failed to load sample file: {} - {}", filePath, e.getMessage(), e);
                     }
                 }
             }
-            
+
         } catch (Exception e) {
             // If we can't access the directory, return empty list
             log.error("Failed to load sample documents", e);
             return Collections.emptyList();
         }
-        
+
         return pipeStreams;
     }
-    
+
+    /**
+     * Loads sample PipeDocs from the sample documents directory.
+     * This method reads various file types from the sample documents directory and creates PipeDoc objects
+     * that can be used for testing purposes.
+     *
+     * @return A collection of PipeDoc objects created from sample documents
+     */
+    public static Collection<PipeDoc> loadSamplePipeDocs() {
+        List<PipeDoc> pipeDocs = new ArrayList<>();
+
+        try {
+            // Get the URI of the sample documents directory
+            URI uri = ProtobufTestDataHelper.class.getResource(SAMPLE_DOCUMENTS_DIRECTORY).toURI();
+            Path sampleDocsPath;
+
+            // Handle both JAR and filesystem paths
+            if (uri.getScheme().equals("jar")) {
+                FileSystem fileSystem = null;
+                try {
+                    fileSystem = FileSystems.newFileSystem(uri, Collections.emptyMap());
+                    sampleDocsPath = fileSystem.getPath(SAMPLE_DOCUMENTS_DIRECTORY);
+                } catch (FileSystemAlreadyExistsException e) {
+                    fileSystem = FileSystems.getFileSystem(uri);
+                    sampleDocsPath = fileSystem.getPath(SAMPLE_DOCUMENTS_DIRECTORY);
+                }
+            } else {
+                sampleDocsPath = Paths.get(uri);
+            }
+
+            // Read all files in the directory (non-recursive)
+            try (Stream<Path> paths = Files.list(sampleDocsPath)) {
+                List<Path> fileList = paths
+                    .filter(Files::isRegularFile)
+                    .filter(path -> !path.getFileName().toString().equals("metadata.csv")) // Skip metadata file
+                    .toList();
+
+                // Process each file
+                for (Path filePath : fileList) {
+                    try {
+                        String fileName = filePath.getFileName().toString();
+
+                        // Read file content
+                        byte[] fileContent;
+                        try (InputStream is = Files.newInputStream(filePath)) {
+                            fileContent = is.readAllBytes();
+                        }
+
+                        // Create a PipeDoc to hold the binary data in a Blob
+                        Blob.Builder blobBuilder = Blob.newBuilder()
+                            .setData(ByteString.copyFrom(fileContent))
+                            .setFilename(fileName);
+
+                        // Add MIME type based on file extension
+                        String mimeType = guessMimeType(fileName);
+                        if (mimeType != null) {
+                            blobBuilder.setMimeType(mimeType);
+                        }
+
+                        // Add metadata
+                        blobBuilder.putMetadata("source", "sample-documents");
+                        int lastDot = fileName.lastIndexOf('.');
+                        if (lastDot > 0 && lastDot < fileName.length() - 1) {
+                            String extension = fileName.substring(lastDot + 1).toLowerCase();
+                            blobBuilder.putMetadata("file_extension", extension);
+                        }
+
+                        // Create PipeDoc with the blob
+                        PipeDoc.Builder docBuilder = PipeDoc.newBuilder()
+                            .setId("sample-doc-" + fileName.replaceAll("[^a-zA-Z0-9-]", "_"))
+                            .setSourceUri("file://" + fileName)
+                            .setBlob(blobBuilder.build());
+
+                        if (mimeType != null) {
+                            docBuilder.setSourceMimeType(mimeType);
+                        }
+
+                        pipeDocs.add(docBuilder.build());
+
+                    } catch (IOException e) {
+                        // Log error but continue processing other files
+                        log.error("Failed to load sample file: {} - {}", filePath, e.getMessage(), e);
+                    }
+                }
+            }
+
+        } catch (Exception e) {
+            // If we can't access the directory, return empty list
+            log.error("Failed to load sample documents", e);
+            return Collections.emptyList();
+        }
+
+        return pipeDocs;
+    }
+
     /**
      * Guesses the MIME type based on file extension.
      *
@@ -550,9 +573,9 @@ public class ProtobufTestDataHelper {
         if (fileName == null) {
             return null;
         }
-        
+
         String lowercaseFileName = fileName.toLowerCase();
-        
+
         // Common document types
         if (lowercaseFileName.endsWith(".pdf")) return "application/pdf";
         if (lowercaseFileName.endsWith(".doc")) return "application/msword";
@@ -565,23 +588,23 @@ public class ProtobufTestDataHelper {
         if (lowercaseFileName.endsWith(".ods")) return "application/vnd.oasis.opendocument.spreadsheet";
         if (lowercaseFileName.endsWith(".odp")) return "application/vnd.oasis.opendocument.presentation";
         if (lowercaseFileName.endsWith(".rtf")) return "application/rtf";
-        
+
         // Text types
         if (lowercaseFileName.endsWith(".txt")) return "text/plain";
         if (lowercaseFileName.endsWith(".html") || lowercaseFileName.endsWith(".htm")) return "text/html";
         if (lowercaseFileName.endsWith(".csv")) return "text/csv";
         if (lowercaseFileName.endsWith(".json")) return "application/json";
-        
+
         // Image types
         if (lowercaseFileName.endsWith(".png")) return "image/png";
         if (lowercaseFileName.endsWith(".jpg") || lowercaseFileName.endsWith(".jpeg")) return "image/jpeg";
         if (lowercaseFileName.endsWith(".gif")) return "image/gif";
-        
+
         // Video types
         if (lowercaseFileName.endsWith(".mp4")) return "video/mp4";
         if (lowercaseFileName.endsWith(".avi")) return "video/x-msvideo";
         if (lowercaseFileName.endsWith(".mov")) return "video/quicktime";
-        
+
         return null; // Unknown type
     }
 }
